--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,27 @@
-log4j.rootCategory=ERROR, console
-#设置日志的级别，定义日志信息的输出目的
-log4j.rootLogger=INFO,R
-#定义A1的输出目的地为控制台
-#log4j.appender.A1=org.apache.log4j.ConsoleAppender
-#布局为 PatternLayout 可以灵活地指定布局模式。
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-#设置输出格式
-log4j.appender.A1.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss} [%c]-[%p] %m%n
-#定义R的输出目的地为文件，并且文件大小到达指定尺寸的时候产生一个新的文件
-log4j.appender.R=org.apache.log4j.RollingFileAppender
 
-#设置文件大小伟100 kb 文件到达100时，产生一个新文件，
-#MaxBackupIndex 最大记录的文件数为1 查过一个文件删除文件较早的。
-log4j.appender.R.MaxFileSize=1048576KB log4j.appender.R.MaxBackupIndex=1
-#以下和上面一样
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+
+# Set everything to be logged to the console
+log4j.rootCategory=ERROR, console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.target=System.err
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+
+# Set the default spark-shell log level to WARN. When running the spark-shell, the
+# log level for this class is used to overwrite the root logger's log level, so that
+# the user can have different defaults for the shell and regular Spark apps.
+log4j.logger.org.apache.spark.repl.Main=ERROR
+
+# Settings to quiet third party logs that are too verbose
+log4j.logger.org.spark_project.jetty=ERROR
+log4j.logger.org.spark_project.jetty.util.component.AbstractLifeCycle=ERROR
+log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=ERROR
+log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=ERROR
+log4j.logger.org.apache.parquet=ERROR
+log4j.logger.parquet=ERROR
+
+# SPARK-9183: Settings to avoid annoying messages when looking up nonexistent UDFs in SparkSQL with Hive support
+log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=FATAL
+log4j.logger.org.apache.hadoop.hive.ql.exec.FunctionRegistry=ERROR
+
+
