--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,27 @@
             <artifactId>elasticsearch</artifactId>
             <version>6.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalanlp</groupId>
+            <artifactId>breeze-viz_2.11</artifactId>
+            <version>0.13.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-core</artifactId>
+            <version>1.3</version>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.apache.hive</groupId>-->
         <!--            <artifactId>hive-hbase-handler</artifactId>-->
