--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,12 @@
     <groupId>com</groupId>
     <artifactId>mypro</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <spark.version>2.2.0</spark.version>
         <hive.version>1.2.1</hive.version>
-        <hbase.version>1.1.1</hbase.version>
+        <hbase.version>1.3.1</hbase.version>
         <hadoop.version>2.6.0</hadoop.version>
     </properties>
-
     <dependencies>
 
         <!-- spark-->
@@ -50,7 +48,7 @@
             <version>${hbase.version}</version>
         </dependency>
 
-        <!--        -->
+        <!--  hiveHBase      -->
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-hbase-handler</artifactId>
@@ -121,22 +119,24 @@
             <artifactId>elasticsearch</artifactId>
             <version>6.3.0</version>
         </dependency>
+
+        <!--fastJson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <!--graph visualization-->
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.0.19</version>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.4</version>
-        </dependency>
-        <dependency>
             <groupId>org.scalanlp</groupId>
             <artifactId>breeze-viz_2.11</artifactId>
             <version>0.13.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.graphstream</groupId>
             <artifactId>gs-core</artifactId>
