--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,14 @@
             <artifactId>spark-graphx_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
-        <!--  hbase-->
+        <!--  HBase-->
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-server</artifactId>
             <version>${hbase.version}</version>
         </dependency>
 
-        <!--  hiveHBase      -->
+        <!--  hiveHBase-->
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-hbase-handler</artifactId>
