--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,18 @@
         <hadoop.version>2.6.0</hadoop.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
+        <!--添加protobuf依赖-->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.14.0</version>
+        </dependency>
         <!-- spark-->
         <dependency>
             <groupId>org.apache.spark</groupId>
