--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>com</groupId>
     <artifactId>mypro</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <spark.version>2.2.0</spark.version>
         <hive.version>1.2.1</hive.version>
